--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #spring.datasource.url=jdbc:h2:mem:testdb
-#spring.data.jpa.repositories.bootstrap-mode=default
+spring.data.jpa.repositories.bootstrap-mode=default
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 #spring.h2.console.enabled=true
 #spring.jpa.generate-ddl=true
 #spring.datasource.initialize=true
